--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 fastapi
 uvicorn
 diffusers==0.27.2
+huggingface-hub==0.22.2
 accelerate
-transformers
+transformers==4.38.2
 opencv-python
 google-cloud-storage
 pillow
 safetensors
+numpy<2
