--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-fastapi
-uvicorn
-diffusers==0.27.2
-huggingface-hub==0.22.2
+torch
+diffusers
+transformers
 accelerate
-transformers==4.38.2
-opencv-python
-google-cloud-storage
-pillow
 safetensors
-numpy<2
+Pillow
+google-cloud-storage
